Inserção da section Portfolio!!!

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#home">Inicio</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#about">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#projects">Projetos</a></li>
                 </ul>
             </nav> 
 
@@ -111,13 +111,20 @@
             </div>
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio" id="projects">
             <div class="interface">
                 <h2 class="titulo">MEU <span>PORTFÓLIO</span></h2>
                 <div class="flex">
-                    <div class="img-port" style="background-image: url('src/images/');"></div>
-                    <div class="img-port" style="background-image: url('src/images/');"></div>
-                    <div class="img-port" style="background-image: url('src/images/');"></div>
+                    <a href="https://diocesanoconceito.com.br/" target="_blank">
+                        <div class="img-port" style="background-image: url('src/images/project-diocesano.png');">
+                            <div class="overlay">Institucional Cólegio Diocesano</div>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="img-port" style="background-image: url('src/images/project-yourname.png');">
+                            <div class="overlay">Projeto Pessoal <br>Your Name</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
