Inserção do Footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Portfolio, Programador, Developer, Web, Front-end, Back-end, Full-stack, developing">
 
     <title>Portfolio: Bruno Macedo</title>
-
+    <link rel="shortcut icon" href="src/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     
@@ -102,9 +102,9 @@
                         </p>
 
                         <div class="btn-social">
-                            <a href="#"><button><i class="bi bi-instagram"></i></button></a>
-                            <a href="#"><button><i class="bi bi-github"></i></button></a>
-                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://www.instagram.com/eo_buno/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://github.com/BrunoM-Dev/" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/bruno-macedo-frontend/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                         </div>
                     </div>
                 </div>
@@ -129,5 +129,31 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer flex">
+                <div class="logo">
+                    <a href="#">
+                        <h1>Bruno <br> <span>Macedo</span></h1>
+                    </a>
+                </div>
+
+                
+                <div class="btn-social">
+                    <a href="https://www.instagram.com/eo_buno/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                    <a href="https://github.com/BrunoM-Dev/" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                    <a href="https://www.linkedin.com/in/bruno-macedo-frontend/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                </div>
+            </div>
+
+            <div class="line-footer borda">
+                <p>
+                    <i class="bi bi-envelope-fill"></i>
+                    <a href="mailto:devbrunomacedo@gmail.com" target="_blank">devbrunomacedo@gmail.com</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
