--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="overlay">Institucional Cólegio Diocesano</div>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="https://brunom-dev.github.io/projeto-YourName-web/">
                         <div class="img-port" style="background-image: url('src/images/project-yourname.png');">
                             <div class="overlay">Projeto Pessoal <br>Your Name</div>
                         </div>
