correções de bugs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <header>
+    <header class="esconder">
         <div class="interface">
 
             <div class="logo">
@@ -44,7 +44,6 @@
             
 
         </div> <!-- Interface -->
-
         <nav class="mobile-menu" >
             <ul class="menu">
                 <li><a href="#" onClick="menuShow()">Inicio</a></li>
@@ -55,6 +54,7 @@
             </li>
             </ul>
         </nav>
+
     </header>
 
     <main>
