--- a/index.html
+++ b/index.html
@@ -176,9 +176,6 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({delay:100, duration: 600});
-    </script>
-    <!-- <script src="src/js/scripts.js"></script> -->
+    <script src="src/js/scripts.js"></script>
 </body>
 </html>
