Mudança de Cor de fundo

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     <div class="text-topo">
                         <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
 
-                        <p>Seja bem-vindo ao meu portfólio! Aqui, transformo ideias em código para dar vida a projetos. Explore meu portfólio e descubra o que posso criar para você. Vamos começar essa jornada digital juntos!</p>
+                        <p>Seja bem-vindo! Aqui, transformo ideias em código para dar vida a projetos. Explore meu portfólio e descubra o que posso criar para você. Vamos começar essa jornada digital juntos!</p>
 
                         <div class="btn-contato">
-                            <a href="mailto:devbrunomacedo@gmail.com" target="_blank">
+                            <a href="https://wa.me/5588988337938" target="_blank">
                                 <button>Entre em contato</button>
                             </a>
                         </div>
