--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Este meu website portfolio de desenvolvedor web. Esse projeto tem como objetivo divulgas as habilidades, contato e os projetos desenvolvidos pelo developer Bruno Macedo.">
-    <meta name="keywords" content="Portfolio, Programador, Developer, Web, Front-end, Back-end, Full-stack, developing">
+    <meta name="description" content="Este meu website portfolio de desenvolvedor web. Esse projeto tem como objetivo divulgas as habilidades, contato e os projetos desenvolvidos pelo desenvolvedor web Bruno Macedo.">
+    <meta name="keywords" content="Portfolio, Programador, Developer, Web, Front-end, Back-end, Full-stack, Bruno Macedo, Dev Bruno Macedo">
 
     <title>Portfolio: Bruno Macedo</title>
     <link rel="shortcut icon" href="src/images/favicon.png" type="image/png">
