refactor index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             
 
-        </div> <!-- Interface -->
+        </div>
         <nav class="mobile-menu" >
             <ul class="menu">
                 <li><a href="#" onClick="menuShow()">Inicio</a></li>
